Fix annoying overflow on mobile

--- a/themes/dark.css
+++ b/themes/dark.css
@@ -122,6 +122,7 @@ a:active {
     gap: 7px;
     margin-top: 15px;
     border-radius: 11px;
+    overflow-x: hidden;
 }
 
 .h-entry > div:last-child {
