--- a/themes/github.css
+++ b/themes/github.css
@@ -147,6 +147,7 @@ a:active {
     gap: 10px;
     margin-top: 15px;
     border-radius: 11px;
+    overflow-x: hidden;
 }
 
 .h-entry > div:last-child {
