--- a/themes/minimal.css
+++ b/themes/minimal.css
@@ -112,6 +112,7 @@ a:active {
     gap: 7px;
     margin-top: 15px;
     border-radius: 11px;
+    overflow-x: hidden;
 }
 
 .h-entry > div:last-child {
