--- a/themes/twttr.css
+++ b/themes/twttr.css
@@ -161,6 +161,7 @@ a:active {
     gap: 7px;
     margin-top: 15px;
     border-radius: 11px;
+    overflow-x: hidden;
 }
 
 .h-entry > div:last-child {
